# audio-video-metadata

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: enums.rs  lib.rs  metadata.rs  types.rs
