[package]
name = "audio-video-metadata"
version = "0.1.1"
authors = [
  "Guillaume Gomez <guillaume1.gomez@gmail.com>"
]

description = "Audio/Video metadata parser"
repository = "https://github.com/GuillaumeGomez/audio-video-metadata"
license = "MIT"

[lib]
name = "audio_video_metadata"

[dependencies]
ogg_metadata = "0.3"
mp3-metadata = "0.2"
mp4parse = "0.5"
